Completed Add listing page

--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -613,7 +613,7 @@
                                 </div>
                             </div>                         
                             <div class="col-12">
-                                <div class="mt-4">
+                                <div class="mt-4 gallery">
                                     <h5>Gallery</h5>
                                     <div class="op-hrs row">
                                         <div class="col-1 warning">
