--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -79,7 +79,9 @@
                             <div class="col-lg-5">
                                 <select name="" class="form-group w-100" id="chr-select">
                                     <option value="">Ministry Options</option>
-                                    <option value="">...</option>
+                                    <option value="Church">Church</option>
+                                    <option value="Band">Band</option>
+                                    <option value="Choir">Choir</option>
                                 </select>                                 
                             </div>
                             <div class="col-lg-7"></div>
