--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -30,7 +30,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand m-0 p-0 pt-0 pb-0" href="../index.html">
-                <img src="../logo.png" alt="site-logo" class="" width="200" height="55" class="d-inline-block align-top">
+                <img src="../logo-w.png" alt="site-logo" class="" width="200" height="55" class="d-inline-block align-top">
             </a>
             
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -61,8 +61,8 @@
             </div>                          
         </nav>
     </header>
-    <main class="mt-5">
-        <section id="section-1">
+    <main class="">
+        <section id="section-1" class="pt-5 pb-5">
             <div class="container">
                 <div class="text-center pt-3">
                     <h1 class="font-weight-bold">Add Listing</h1>
@@ -152,7 +152,7 @@
                                                 <div class="">
                                                     <div class="form-group">
                                                         <label for="formGroupExampleInput"></label>
-                                                        <input type="text" class="form-control form-input" id="formGroupExampleInput" placeholder="">
+                                                        <input type="time" class="form-control form-input" id="formGroupExampleInput" placeholder="">
                                                     </div>                                                
                                                 </div>
                                             </div>
