--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -240,7 +240,7 @@
                                                 <div class="">
                                                     <div class="form-group">
                                                         <label for="formGroupExampleInput"></label>
-                                            To            <input type="time" class="form-control form-input" id="formGroupExampleInput" placeholder="To">
+                                                        <input type="time" class="form-control form-input" id="formGroupExampleInput" placeholder="To">
                                                     </div>                                                
                                                 </div>                                                
                                             </div>
