Added add-event page

--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -113,12 +113,6 @@
                             <div class="col-lg-6">
                                 <select name="" class="form-group mt-4 w-100" id="chr-select">
                                     <option value="">Select State</option>
-                                    <option value="">...</option>
-                                </select>                                
-                            </div> 
-                            <div class="col-lg-6">
-                                <select name="" class="form-group mt-4 w-100" id="chr-select">
-                                    <option value="">Select Country</option>
                                     <option value="Lagos">Lagos</option>
                                     <option value="Oyo">Oyo</option>
                                     <option value="Kaduna">Kaduna</option>
@@ -156,6 +150,12 @@
                                     <option value="Bayelsa">Bayelsa</option>                                            
                                     <option value="FCT">FCT</option>                                    
                                 </select>                                
+                            </div> 
+                            <div class="col-lg-6">
+                                <select name="" class="form-group mt-4 w-100" id="chr-select">
+                                    <option value="">Select Country</option>
+                                    <option value="Nigeria" class="">Nigeria</option>
+                                </select>                                
                             </div>
                             <div class="col-12">
                                 <div class="mt-4">
@@ -166,7 +166,7 @@
                                         </div>
                                         <div class="col-11">
                                             <p>
-                                                If your Church has two working hours (for example one at AM and another one at PM), use all the four fields
+                                                If your Church/Choir/Band has two working hours (for example one at AM and another one at PM), use all the four fields
                                                 for each day. If not, just use the first two. If your church is not opening on some of the days, simply leave
                                                 the field empty                                                
                                             </p>
