--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link pl-1" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pl-1" href="#">Add Event</a>
+                    <a class="nav-link pl-1" href="add-event/index.html">Add Event</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pl-1" href="add-listing/index.html">Add Ministry</a>
@@ -463,7 +463,7 @@
                         <p class="font-weight-bold text-center mt-5">We bring the people closer to the Church</p>
                         <div class="text-center mx-auto mt-5">
                             <a href="add-listing/index.html" class="btn d-inline btn-warning mr-3">Add Ministry</a>
-                            <a href="#" class="btn d-inline btn-warning">Add Event</a>
+                            <a href="add-event/index.html" class="btn d-inline btn-warning">Add Event</a>
                         </div>                    
                     </div class="add-ministry-sub">
                 </div>
