--- a/add-event/index.html
+++ b/add-event/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="header-text">
             <div class="container">
-                <h3 class="text-center p-5">Expose your events to thousands of members on wakachurch</h3>
+                <h3 class="text-center p-5"><span class="text-justify">Expose your events to thousands of members on wakachurch</span></h3>
             </div>
         </div>
     </header>
