--- a/add-event/index.html
+++ b/add-event/index.html
@@ -36,7 +36,7 @@
             <div class="form">
                 <form action="" class="row" method="post">
                     <div class="col-12">
-                        <div class="add-photo form-group label form-control form-input"><span class="text-dark"> </span>
+                        <div class="add-photo form-group label form-control form-input">
                             <label class="img-upload mx-auto " for="file"> Add Photo</label>
                             <!-- <input type="text" disabled class="form-control form-input" id="formGroupExampleInput" placeholder="Logo"> -->
                             <input type="file" class="" id="file" accept="image/*" >
