--- a/add-event/index.html
+++ b/add-event/index.html
@@ -37,7 +37,7 @@
                 <form action="" class="row" method="post">
                     <div class="col-12">
                         <div class="add-photo form-group label form-control form-input">
-                            <label class="img-upload  " for="file"> Add Photo</label>
+                            <label class="img-upload mx-auto" for="file"> Add Photo</label>
                             <!-- <input type="text" disabled class="form-control form-input" id="formGroupExampleInput" placeholder="Logo"> -->
                             <input type="file" class="" id="file" accept="image/*" >
                         </div>                         
