--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
+    <header id="main-header">
         <!-- Navbar -->
         
         <nav class="navbar p-0 navbar-expand-lg navbar-light bg-light">
@@ -1424,9 +1424,12 @@
         </section> 
         <footer>
             <div class="container pb-2">
-                <div class="pt-5 pb-5 text-left">
-                    <h1>WAKACHURCH</h1>
+            <div class="pt-5 pb-2 row text-left">
+                <div class="col-6 col-sm-3">
+                    <img class="w-100" src="logo-w.png" alt="logo-white">
                 </div>
+                
+            </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="p-3 ministries">
