added info page before add-lisitng page

--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -48,7 +48,7 @@
                     <a class="al-nav-link pl-1" href="#">Add Event</a>
                 </li>
                 <li class="nav-item al-nav-item">
-                    <a class="al-nav-link pl-1" href="#">Add Ministry</a>
+                    <a class="al-nav-link pl-1" href="../add-listing/info.html">Add Ministry</a>
                 </li>
                 <li class="al-nav-link pl-1 pt-1 mr-3 p-0">
                     <a href="auth/login.html" class="btn btn-danger ">Login</a>
