--- a/add-event/index.html
+++ b/add-event/index.html
@@ -44,7 +44,7 @@
                 <a class="al-nav-link pl-1" href="../add-event/index.html">Add Event</a>
             </li>
             <li class="nav-item al-nav-item">
-                <a class="al-nav-link pl-1" href="../add-listing/index.html">Add Ministry</a>
+                <a class="al-nav-link pl-1" href="../add-listing/info.html">Add Ministry</a>
             </li>
             <li class="al-nav-link pl-1 pt-1 mr-3 p-0">
                 <a href="auth/login.html" class="btn btn-danger ">Login</a>
