--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="nav-link pl-1" href="add-event/index.html">Add Event</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pl-1" href="add-listing/index.html">Add Ministry</a>
+                    <a class="nav-link pl-1" href="add-listing/info.html">Add Ministry</a>
                 </li>
                 <li class="nav-link pl-1 pt-1 mr-3 p-0">
                     <a href="auth/login.html" class="btn btn-danger ">Login</a>
