--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -45,7 +45,7 @@
                     <a class="al-nav-link pl-1" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item al-nav-item">
-                    <a class="al-nav-link pl-1" href="#">Add Event</a>
+                    <a class="al-nav-link pl-1" href="../add-event/index.html">Add Event</a>
                 </li>
                 <li class="nav-item al-nav-item">
                     <a class="al-nav-link pl-1" href="../add-listing/info.html">Add Ministry</a>
