added info page before add-lisitng page

--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
                             </div>                             
                         </div>
                     </div>
-                    <a href="#" class="btn btn-reg btn-lg"><i class="fas fa-user-plus"></i> Register Now!</a>
+                    <a href="add-listing/info.html" class="btn btn-reg btn-lg"><i class="fas fa-user-plus"></i> Register Now!</a>
                 </div>
             </div>
         </section>
@@ -1417,8 +1417,8 @@
                     </div>                                      
                 </div>
                 <div class="see-more">
-                    <a href="#" class="btn btn-secondary">Add More Events</a>
-                    <a href="#" class="btn btn-secondary">See More Events</a>
+                    <a href="add-event/index.html" class="btn btn-secondary">Add More Events</a>
+                    <a href="#" class="disabled btn btn-secondary">See More Events</a>
                 </div>                
             </div>            
         </section> 
@@ -1451,8 +1451,8 @@
                         <div class="p-3 discover">
                             <h3>DISCOVER</h3>
                             <div class="mt-4">
-                                <a href="#" class="mb-0 font-weight-bold">All Ministries</a>
-                                <a href="#" class="mb-0 font-weight-bold">All Events</a>
+                                <a href="add-listing/info.html" class="mb-0 font-weight-bold">All Ministries</a>
+                                <a href="add-event/index.html" class="mb-0 font-weight-bold">All Events</a>
                                 <a href="#" class="mb-0 font-weight-bold">Recently Reviewed</a>
                                 <a href="#" class="mb-0 font-weight-bold">Recently Added Churches</a>
                             </div>
