--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -165,7 +165,7 @@
                                         </div>
                                         <div class="col-11">
                                             <p>
-                                                If your Church/Choir/Band has two working hours (for example one at AM and another one at PM), use all the four fields
+                                                If your <span id="chgTxt"></span> has two working hours (for example one at AM and another one at PM), use all the four fields
                                                 for each day. If not, just use the first two. If your church is not opening on some of the days, simply leave
                                                 the field empty                                                
                                             </p>
