--- a/add-listing/info.html
+++ b/add-listing/info.html
@@ -88,7 +88,7 @@
                                 <input type="checkbox" name="condition" id="condition">
                                 <label class="d-inline" for="condition">I hereby accept the terms of adding ministry</label>
                             </form>
-                            <a href="index.html" class="mx-auto btn btn-dark btn-sm">Continue</a>
+                            <a href="index.html" id="btn-condition" class="mx-auto btn btn-dark btn-sm">Continue</a>
                         </div>
                     </div>
                 </div>
