--- a/add-listing/info.html
+++ b/add-listing/info.html
@@ -47,10 +47,10 @@
                 <a class="al-nav-link pl-1" href="../add-listing/info.html">Add Ministry</a>
             </li>
             <li class="al-nav-link pl-1 pt-1 mr-3 p-0">
-                <a href="auth/login.html" class="btn btn-danger ">Login</a>
+                <a href="../auth/login.html" class="btn btn-danger ">Login</a>
             </li>
             <li class="al-nav-link pl-1 pt-1 p-0">
-                <a href="auth/signup.html" class="btn btn-success">Sign Up</a>
+                <a href="../auth/signup.html" class="btn btn-success">Sign Up</a>
             </li>
             </ul>
             
