--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -669,7 +669,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group label form-control form-input"><span class="text-dark">Image 1</span>
-                                            <label class="al-mg-upload g-img" for="file"> Upload Image</label>
+                                            <label class="al-img-upload g-img" for="file"> Upload Image</label>
                                             <!-- <input type="text" disabled class="form-control form-input" id="formGroupExampleInput" placeholder="Logo"> -->
                                             <input type="file" class="form-control " id="file" accept="image/*" >
                                         </div>                                            
