--- a/add-listing/info.html
+++ b/add-listing/info.html
@@ -96,7 +96,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer style="border-top: 1px solid white">
         <div class="container pb-2">
             <div class="pt-5 pb-2 row text-left">
                 <div class="col-6 col-sm-3">
