--- a/add-listing/index.html
+++ b/add-listing/index.html
@@ -166,7 +166,7 @@
                                         <div class="col-11">
                                             <p>
                                                 If your <span id="chgTxt"></span> has two working hours (for example one at AM and another one at PM), use all the four fields
-                                                for each day. If not, just use the first two. If your church is not opening on some of the days, simply leave
+                                                for each day. If not, just use the first two. If your <span id="chgTxt"></span> is not opening on some of the days, simply leave
                                                 the field empty                                                
                                             </p>
                                         </div>
@@ -497,7 +497,7 @@
                                         </div>
                                         <div class="col-11">
                                             <p>
-                                                Use the following field to show all the contact information about your church on the details page                                               
+                                                Use the following field to show all the contact information about your <span id="chgTxt"></span> on the details page                                               
                                             </p>
                                         </div>
                                     </div>
@@ -536,7 +536,7 @@
                                         </div>
                                         <div class="col-11">
                                             <p>
-                                                Fill out the social network links for your church fan pages and profiles
+                                                Fill out the social network links for your <span id="chgTxt"></span> fan pages and profiles
                                             </p>
                                         </div>
                                     </div>
@@ -657,7 +657,7 @@
                                         </div>
                                         <div class="col-11">
                                             <p>
-                                               Upload the photos of your church to show it in a more interesting way. 
+                                               Upload the photos of your <span id="chgTxt"></span> to show it in a more interesting way. 
                                                One picture is worth more than a thousand words.
                                             </p>
                                         </div>
