--- a/auth/login.html
+++ b/auth/login.html
@@ -46,7 +46,7 @@
                             <button type="submit" class="btn btn-danger">Sign in</button>
                         </form>
                         <div class="mt-5 text-center">
-                            <p class="btn btn-secondary">New Member? <a class="text-danger" href="#"> Sign Up</a></p>
+                            <p class="btn btn-secondary">New Member? <a class="text-danger" href="../auth/signup.html"> Sign Up</a></p>
                         </div>                        
                     </div>
                     <div class="col-lg-4"></div>
