--- a/auth/signup.html
+++ b/auth/signup.html
@@ -76,7 +76,7 @@
                             <button type="submit" class="btn btn-dark">Sign Up</button>
                         </form>
                         <div class="mt-5 text-center">
-                            <p class="btn btn-secondary">Already have an account? <a class="text-danger" href="#"> Log in</a></p>
+                            <p class="btn btn-secondary">Already have an account? <a class="text-danger" href="../auth/login.html"> Log in</a></p>
                         </div>                        
                     </div>
                     <div class="col-lg-4"></div>
