--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
                             </div>                             
                         </div>
                     </div>
-                    <a href="add-listing/info.html" class="btn btn-reg btn-lg"><i class="fas fa-user-plus"></i> Register Now!</a>
+                    <a href="auth/signup.html" class="btn btn-reg btn-lg"><i class="fas fa-user-plus"></i> Register Now!</a>
                 </div>
             </div>
         </section>
