--- a/auth/signup.html
+++ b/auth/signup.html
@@ -66,12 +66,12 @@
                                 </select>
                             </div> 
                             <div class="text-left form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">My Church Not Listed ?</label>   
+                                <input type="checkbox" class="form-check-input" id="chr-not-listed">
+                                <label class="form-check-label" for="chr-not-listed">My Church Not Listed?</label>   
                             </div>                                                        
                             <div class="text-left form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">I hereby agree to the <span class="text-danger"><a href="#" class="text-danger">Terms and Condition</a></span></label>   
+                                <input type="checkbox" class="form-check-input" id="hereby-agree">
+                                <label class="form-check-label" for="hereby-agree">I hereby agree to the <span class="text-danger"><a href="#" class="text-danger">Terms and Condition</a></span></label>   
                             </div>                           
                             <button type="submit" class="btn btn-dark">Sign Up</button>
                         </form>
